syntax = "proto3";

package bufexample.pet.v1;

option go_package = "example.com/go-pet-client/internal/gen/proto/go/bufexample/pet/v1";

import "google/type/datetime.proto";
import "bufexample/payment/v1/payment.proto";

enum PetType {
  PET_TYPE_UNSPECIFIED = 0;
  PET_TYPE_CAT = 1;
  PET_TYPE_DOG = 2;
  PET_TYPE_SNAKE = 3;
  PET_TYPE_HAMSTER = 4;
  PET_TYPE_FISH = 5;
}

message Pet {
  PetType pet_type = 1;
  string pet_id = 2;
  string name = 3;
  google.type.DateTime created_at = 4;
}

message GetPetRequest {
  string pet_id = 1;
}

message GetPetResponse {
  Pet pet = 1;
}

message PutPetRequest {
  PetType pet_type = 1;
  string name = 2;
}

message PutPetResponse {
  Pet pet = 1;
}

message DeletePetRequest {
  string pet_id = 1;
}

message DeletePetResponse {}

message PurchasePetRequest {
  string pet_id = 1;
  bufexample.payment.v1.Order order = 2;
}

message PurchasePetResponse {}

service PetStore {
  rpc GetPet(GetPetRequest) returns (GetPetResponse) {}
  rpc PutPet(PutPetRequest) returns (PutPetResponse) {}
  rpc DeletePet(DeletePetRequest) returns (DeletePetResponse) {}
  rpc PurchasePet(PurchasePetRequest) returns (PurchasePetResponse) {}
}
